--- a/src/component/Blogpost/Blogpost.css
+++ b/src/component/Blogpost/Blogpost.css
@@ -60,6 +60,20 @@ content p.desc {
     background: #ff4747;
     transform: scale(1.1);
 }
+.update {
+    padding: 8px 12px;
+    background: rgb(1, 34, 71);
+    color: white;
+    border-radius: 4px;
+    border-color: white;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.update:hover{
+    background: #0066eb;
+    transform: scale(1.1);
+}
 
 .form-add-post {
     box-shadow: 0px  0px 16px rgba(0, 0, 0, 0.5);
