--- a/src/component/Blogpost/Blogpost.css
+++ b/src/component/Blogpost/Blogpost.css
@@ -1,3 +1,10 @@
+.head-title{
+    margin: 0px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #3d4a6e;
+    margin: 10px 16px;
+}
 .section-title {
     margin-left: 20px;
     font-size: 20px;
