--- a/src/component/Product/Product.css
+++ b/src/component/Product/Product.css
@@ -8,6 +8,14 @@
     margin-bottom: 40px;
 }
 
+.head-title{
+    margin: 0px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #3d4a6e;
+    margin: 10px 16px;
+}
+
 .logo {
     width: 100px;
     color: white;
