--- a/src/component/Blogpost/Blogpost.css
+++ b/src/component/Blogpost/Blogpost.css
@@ -107,10 +107,11 @@ content p.desc {
     padding: 12px;
     border-radius: 4px;
     margin-bottom: 20px;
-    width: 100%;
+    width: 100% !important;
     box-sizing: border-box;
     font-size: 12px;
     color: #607d8b;
+    
 }
 
 
