--- a/src/container/home/Home.css
+++ b/src/container/home/Home.css
@@ -5,7 +5,7 @@
 
 .navigation a {
     padding: 10px 40px;
-    margin: 10px;
+    margin: 10px 20px 10px;
     text-decoration: none;
     color: white;
     background: #07ebb9;
